<resources>
    <string name="app_name">Calculator</string>
    <string name="button_zero">0</string>
    <string name="button_one">1</string>
    <string name="button_two">2</string>
    <string name="button_three">3</string>
    <string name="button_four">4</string>
    <string name="button_five">5</string>
    <string name="button_six">6</string>
    <string name="button_seven">7</string>
    <string name="button_eight">8</string>
    <string name="button_nine">9</string>
    <string name="button_result">=</string>
    <string name="button_backspace">⌫</string>
    <string name="button_percent">%</string>
    <string name="button_divide">÷</string>
    <string name="button_multiply">×</string>
    <string name="button_add">+</string>
    <string name="button_change">↹</string>
    <string name="button_comma">,</string>
    <string name="button_subtract">-</string>
    <string name="button_clear">AC</string>
    <string name="result_panel_text">=0</string>
    <string name="button_sin">sin</string>
    <string name="button_cos">cos</string>
    <string name="button_tan">tan</string>
    <string name="button_cot">cot</string>
    <string name="button_asin">asin</string>
    <string name="button_acos">acos</string>
    <string name="button_atan">atan</string>
    <string name="button_acot">acot</string>
    <string name="button_power">^</string>
    <string name="button_reverse">^(-1)</string>
    <string name="button_power_two">^2</string>
    <string name="button_power_three">^3</string>
    <string name="button_lg">lg</string>
    <string name="button_ln">ln</string>
    <string name="button_bracket1">(</string>
    <string name="button_bracket2">)</string>
    <string name="button_sqrt">√</string>
    <string name="button_factorial">!</string>
    <string name="button_pi">π</string>
    <string name="button_e">e</string>
    <string name="button_abs">|x|</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
